# chatgpt-evals

./: .gitignore  conversations_raw.json  eval_pipeline.ipynb  evaluated_responses.csv  insert_prompt.ipynb  prompt_response_pairs.csv  pyproject.toml
src/chatgpt_evals/: __init__.py  eval_pipeline.ipynb  evaluated_responses.csv  evaluated_responses.xlsx  evaluated_responses_v2.xlsx  evaluated_responses_v3_part1.xlsx  evaluated_responses_v3_part2.xlsx  evaluated_responses_v3_part3.xlsx  exported-cookies.json  prompt_response_pairs.csv
src/compliance_api/: compliance_api_extraction.ipynb
